src/objects/CompanyMetric__c.object
<CustomObject>
    <fields>
        <fullName>AdminCMRatio__c</fullName>
        <formula>&quot;1&quot; + &quot;:&quot; + TEXT(ROUND(CMRatioAdmin__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SRS / CM Ratio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminCasesRatio__c</fullName>
        <formula>&quot;1&quot; + &quot;:&quot; + TEXT(ROUND(CasesRatioAdmin__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SRS / Cases Ratio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminReportsRatio__c</fullName>
        <formula>&quot;1&quot;  + &quot;:&quot; + TEXT(ROUND(ReportsRatioAdmin__c,2))</formula>
        <label>SRS / Reports Ratio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminStaff__c</fullName>
        <label>SRS Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMQARatio__c</fullName>
        <formula>&quot;1&quot; + &quot;:&quot; + TEXT(ROUND(CMRatioQA__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA / CM Ratio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMRatioAdmin__c</fullName>
        <formula>CaseManagers__c / AdminStaff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CM Ratio (Admin)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMRatioQA__c</fullName>
        <formula>IF(
QAStaff__c &lt;&gt; 0,
CaseManagers__c / QAStaff__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CM Ratio (QA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseManagers__c</fullName>
        <label>Case Managers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CasesClosed__c</fullName>
        <label>Cases (Closed)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CasesOpen__c</fullName>
        <label>Cases (Open)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CasesRatioAdmin__c</fullName>
        <formula>TotalOpenCases__c/AdminStaff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cases Ratio (Admin)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CasesRatioQA__c</fullName>
        <formula>IF(
QAStaff__c &lt;&gt; 0,
TotalOpenCases__c/QAStaff__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cases Ratio (QA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CasesReOpened__c</fullName>
        <label>Cases (Re-Opened)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Holds month/year as the external key</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MonthEnding__c</fullName>
        <label>Month Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QACasesRatio__c</fullName>
        <formula>&quot;1&quot;  + &quot;:&quot; + TEXT(ROUND(CasesRatioQA__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA / Cases Ratio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAReportsRatio__c</fullName>
        <formula>&quot;1&quot; + &quot;:&quot; + TEXT(ROUND(ReportsRatioQA__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA / Reports Ratio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAStaff__c</fullName>
        <description>Number of Active QA Staff.</description>
        <label>QA Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportsApproved__c</fullName>
        <label>Reports (Approved)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportsCompleted__c</fullName>
        <label>Reports (Completed)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportsInProcess__c</fullName>
        <label>Reports (In Process)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportsRatioAdmin__c</fullName>
        <formula>TotalReports__c/AdminStaff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reports Ratio (Admin)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportsRatioQA__c</fullName>
        <formula>IF(
QAStaff__c &lt;&gt; 0,
TotalReports__c/QAStaff__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reports Ratio (QA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportsSubmitted__c</fullName>
        <label>Reports (Submitted)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOpenCases__c</fullName>
        <formula>CasesOpen__c + CasesReOpened__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Open Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalReports__c</fullName>
        <formula>ReportsSubmitted__c + ReportsApproved__c + ReportsCompleted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This total includes Submitted, Approved and Completed Reports.  (Excluding In Process)</inlineHelpText>
        <label>Total Reports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Company Metric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MonthEnding__c</columns>
        <columns>AdminStaff__c</columns>
        <columns>CaseManagers__c</columns>
        <columns>QAStaff__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Report_Numbers</fullName>
        <columns>MonthEnding__c</columns>
        <columns>ReportsCompleted__c</columns>
        <columns>ReportsInProcess__c</columns>
        <columns>ReportsSubmitted__c</columns>
        <columns>ReportsApproved__c</columns>
        <columns>TotalReports__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Report Numbers</label>
    </listViews>
    <nameField>
        <displayFormat>Metric-{0000000000}</displayFormat>
        <label>Company Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>